--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -32,6 +31,7 @@
         <activity android:name=".MapviewPage" />
         <activity android:name=".UserLogin" />
         <activity android:name=".GuardianRegistration" />
+        <activity android:name=".ChildListDisplay"></activity>
     </application>
 
 </manifest>
